# rl-garden

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  mutagen.yml.example  pyproject.toml
docs/: CHECKPOINT.md  CONFIGURATION.md  ISAACLAB_CAMERA_TRAINING_STALL.md  ISAACLAB_CUSTOM_TASKS.md  OFFLINE_ACCELERATION.md  PICKCUBE_SAC_REGRESSION_ABLATION.md  RESIDUAL_SAC.md  RNG_AND_NUMERICAL_DETERMINISM.md  ROBOTWIN.md  ROBOTWIN_ACT.md  TELEOP_README.md  WSRL_README.md  WSRL_REPRODUCTION.md  hil_serl_roadmap.md  robot_infra_roadmap.md
examples/: convert_robotwin_act_delta_ee.py  diagnose_q_contrast.py  eval_act_robotwin.py  eval_checkpoint.py  eval_residual_sac_rgbd_peg.py  generate.py  generate_residual_offline_h5.py  generate_state_policy_rgb_demos.py  generate_wsrl_dataset.py  pretrain_cql_offline.py  pretrain_offline.py  pretrain_wsrl_offline.py  probe_grasp_window.py  probe_linear_pose.py  probe_sac_rgbd_camera_ablation.py  replay_maniskill_demo.py  train_act_robotwin.py  train_drqv2_rgb.py  train_flash_sac_state.py  train_off2on.py  train_online.py  train_porl.py  train_ppo_rgbd.py  train_ppo_robotwin_rgbd.py  train_ppo_state.py  train_pure_warmup.py  train_real_world.py  train_residual_sac.py  train_residual_sac_rgbd.py  train_residual_sac_rgbd_peg.py  train_residual_sac_state_peg.py  train_sac_rgbd.py  train_sac_rgbd_peg.py  train_sac_robotwin_rgbd.py  train_sac_state.py  train_wsrl.py  train_wsrl_rgbd.py
pretrained_models/: README.md
rl_garden/: __init__.py
robot_infra/: __init__.py
scripts/: eval_act_robotwin.sh  eval_residual_sac_rgbd_peg.sh  launch_multi_gpu.py  mutagen_ensure.sh  pretrain_calql_offline.sh  pretrain_cql_offline.sh  pretrain_offline.sh  train_drqv2_rgb.sh  train_ppo_rgbd.sh  train_ppo_robotwin_place_empty_cup_rgbd.sh  train_ppo_state.sh  train_residual_rgbd.sh  train_residual_sac.sh  train_residual_sac_rgbd.sh  train_residual_sac_rgbd_peg.sh  train_residual_sac_robotwin.sh  train_residual_sac_state_peg.sh  (+8 more)
(+488 files in other folders)
